--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- Это комментарий -->
 
 <head>
   <title>CSS</title>
@@ -8,59 +9,40 @@
 
 <body>
   <div>
-    <p class="p1">Это первый параграф.</p>
+    <p class="p1">Это первый абзац.</p>
   </div>
 
   <!-- Шрифт элемента -->
-  <p class="serif">
-    This is a paragraph shown in serif font.
-  </p>
-  <p class="sansserif">
-    This is a paragraph shown in sans-serif font.
-  </p>
-  <p class="monospace">
-    This is a paragraph shown in monospace font.
-  </p>
-  <p class="cursive">
-    This is a paragraph shown in cursive font.
-  </p>
-  <p class="fantasy">
-    This is a paragraph shown in fantasy font.
-  </p>
+  <p class="serif">Этот абзац выделен шрифтом с засечками (Serif font).</p>
+  <p class="sansserif">Этот абзац выделен шрифтом без засечек (Sans Serif font).</p>
+  <p class="monospace">Этот абзац выделен шрифтом (Monospace font).</p>
+  <p class="cursive">Этот абзац выделен шрифтом (Cursive font).</p>
+  <p class="fantasy">Этот абзац выделен шрифтом (Fantasy font).</p>
 
   <!-- Размер шрифта -->
-  <p class="small">
-    Paragraph text set to be small
-  </p>
-  <p class="medium">
-    Paragraph text set to be medium
-  </p>
-  <p class="large">
-    Paragraph text set to be large
-  </p>
-  <p class="xlarge">
-    Paragraph text set to be very large
-  </p>
-  <h1>Размер шрифта в px</h1>
-  <h2>Размер шрифта в em</h2>
+  <p class="small">Этот абзац выделен маленьким шрифтом.</p>
+  <p class="medium">Этот абзац выделен средним шрифтом.</p>
+  <p class="large">Этот абзац выделен большим шрифтом.</p>
+  <p class="xlarge">Этот абзац выделен очень большим шрифтом.</p>
+  <h1>Размер шрифта задан в px</h1>
+  <h2>Размер шрифта задан в em</h2>
 
   <!-- Стиль шрифта -->
-  <p class="normal">This paragraph is normal.</p>
-  <p class="italic">This paragraph is italic.</p>
-  <p class="oblique">This paragraph is oblique.</p>
+  <p class="normal">Этот абзац выделен нормальным шрифтом.</p>
+  <p class="italic">Этот абзац выделен курсивом.</p>
+  <p class="oblique">Этот абзац выделен наклонным шрифтом.</p>
 
   <!-- Толщина текста -->
-  <p class="light">This is a font with a "lighter" weight.</p>
-  <p class="bold">This is a font with a "bold" weight.</p>
-  <p class="bolder">This is a font with a "bolder" weight.</p>
-
-  <p class="w100">This is a font with a "100" weight.</p>
-  <p class="w900">This is a font with a "900" weight.</p>
+  <p class="light">Это шрифт с более «легким» начертанием.</p>
+  <p class="bold">Это шрифт с «жирным» начертанием.</p>
+  <p class="bolder">Это шрифт с более «жирным» начертанием.</p>
+  <p class="w100">Это шрифт с толщиной "100".</p>
+  <p class="w900">Это шрифт с толщиной "900".</p>
 
   <!-- font-variant позволяет конвертировать шрифт в маленькие заглавные буквы -->
-  <p class="normal">Paragraph font variant set to normal.</p>
-  <p class="small">Paragraph font variant set to small-caps.</p>
-  <p class="inherit">Paragraph font variant set to inherit.</p>
+  <p class="normal">Вариант шрифта абзаца (обычный).</p>
+  <p class="small">Вариант шрифта абзаца (маленькие заглавные буквы).</p>
+  <p class="inherit">Вариант шрифта абзаца (наследование).</p>
 
   <!-- Текст цвета с помощью (названия цвета) -->
   <p class="example">Текст зелёного цвета.</p>
@@ -83,25 +65,20 @@
     </tr>
   </table>
 
-  <p>This is an <span class="baseline">inline text</span> example.</p>
-  <p>This is a <span class="sub">sub line text</span> example.</p>
-  <p> This is a <span class="super">super line text</span> example.</p>
-  <p> This is a <span class="pixel">pixel</span> example.</p>
-  <p>This is an <span class="procent">inline text</span> example.</p>
-  <p>This is an <span class="pt">inline text</span> example.</p>
-  <p>This is an <span class="cm">inline text</span> example.</p>
+  <p>Это пример <span class="baseline">встроенного</span> текста.</p>
+  <p>Это пример <span class="sub">подстрочного</span> текста.</p>
+  <p>Это пример <span class="super">надстрочного</span> текста.</p>
+  <p>Это пример текста <span class="pixel">(px)</span>.</p>
+  <p>Это пример текста <span class="procent">(%)</span>.</p>
+  <p>Это пример текста <span class="pt">(pt)</span>.</p>
+  <p>Это пример текста <span class="cm">(cm)</span>.</p>
 
   <!-- Декорация текста -->
-  <p class="none">Значение по умолчанию, определяет нормальный текст
-    .</p>
-  <p class="inherit">Наследует это свойство от его родительского элемента
-    .</p>
-  <p class="overline">Рисует горизонтальную линию над текстом
-    .</p>
-  <p class="underline">Рисует горизонтальную линию под текстом
-    .</p>
-  <p class="line-through">Рисует горизонтальную линию сквозь текст (заменяет HTML тег < s>)
-      .</p>
+  <p class="none">Значение по умолчанию, определяет нормальный текст.</p>
+  <p class="inherit">Наследует это свойство от его родительского элемента.</p>
+  <p class="overline">Рисует горизонтальную линию над текстом.</p>
+  <p class="underline">Рисует горизонтальную линию под текстом.</p>
+  <p class="line-through">Рисует горизонтальную линию сквозь текст (заменяет HTML тег &lt;s&gt).</p>
 
   <!-- Значение blink заставляет текст мигать -->
   <p class="blink">Значение blink заставляет текст мигать</p>
@@ -113,53 +90,55 @@
     как pt, cm, em и т. д. </p>
 
   <!--Свойство text-shadow добавляет к тексту тень.
-Оно принимает четыре значения: первое значение определяет длину тени по оси x (по горизонтали), второе значение определяетp class длину по оси y (по вертикали), третье значение определяет размытие тени, а четвертое значение определяет цвет.
--->
-  <p class="shadow">Пример текста с тенью</p>
+Оно принимает четыре значения: первое значение определяет длину тени по оси x (по горизонтали),
+второе значение определяетp class длину по оси y (по вертикали),
+третье значение определяет размытие тени,
+а четвертое значение определяет цвет. -->
+  <p class="shadow">Пример текста с тенью.</p>
 
   <!-- Эффект размытия свойства text-shadow
-
 При работе с тенями вы можете использовать любые поддерживаемые CSS цветовые форматы.
-
 Для значений x и y могут применяться различные единицы измерений (как px, cm, mm, in, pc, pt, и т.д.).
-Отрицательные значения также доступны для использования.
- -->
-  <p class="shadow-effect">Пример текста с размытой тенью</p>
+Отрицательные значения также доступны для использования.-->
+  <p class="shadow-effect">Пример текста с размытой тенью.</p>
 
   <!-- Свойство text-transform определяет регистр текста -->
-  <p class="capitalize">
-         Значение заглавных букв преобразует первое символ в каждом слове в верхнем регистре; все остальные персонажи остаются без изменений.
-  </p>
-  <p class="uppercase"> Это значение переводит все символы в верхний регистр.</p>
-  <p class="lowercase"> Это значение переводит все символы в нижний регистр.</p>
+  <p class="capitalize">Это значение выводит каждое слово с заглавной.</p>
+  <p class="uppercase">Это значение выводит все символы в верхнем регистре.</p>
+  <p class="lowercase">Это значение выводит все символы в нижнем регистре.</p>
 
   <!-- Свойство letter-spacing определяет расстояние между символами в тексте. -->
-  <p class="normal"> В этом абзаце не применяется дополнительный интервал между буквами. </p>
-  <p class="positive"> Этот абзац разделен буквами в 4px. </p>
-  <p class="negative"> Этот абзац имеет интервал букв в -1,5 пикселя </p>
+  <p class="normal">В этом абзаце не применяется дополнительный интервал между буквами.</p>
+  <p class="positive">Этот абзац разделен интервалом между буквами в 4 px.</p>
+  <p class="negative">Этот абзац имеет интервал между буквами в -1,5 px.</p>
 
-  <!-- Свойство word-spacing определяет расстояние между словами в тексте (значения: px, pt, pc, cm, mm, inches, em, и ex.
-) -->
-  <p class="px"> Этот абзац с интервалом в 30 пикселей. </p>
+  <!-- Свойство word-spacing определяет расстояние между словами в тексте (значения: px, pt, pc, cm, mm, inches, em, и ex.) -->
+  <p class="px">Этот абзац с интервалом между словами в 30 пикселей.</p>
 
-  <!-- Свойство white-space определяет, как будут отображаться пробелы внутри элемента. -->
-  <!-- При значении nowrap, текст продолжается на одной линии без переноса строки до следующего тега < br> Текст будет отображаться одной строкой, пока не встретится тег < br/>. -->
-
+  <!-- Свойство white-space определяет, как будут отображаться пробелы внутри элемента.
+При значении nowrap, текст продолжается на одной линии без переноса строки до следующего тега < br>.
+Текст будет отображаться одной строкой, пока не встретится тег < br/>. -->
   <p class="nowrap">
-    Этот параграф имеет несколько пробелов и
-    разрыв строки, но он будет игнорироваться, так как мы использовали значение nowrap.
+    Этот параграф имеет несколько пробелов и разрыв
+    строки,
+    но он будет игнорироваться, так как мы использовали значение nowrap.
   </p>
   <p class="pre">
-    В разметке у нас есть несколько пробелов
-    и разрыв строки. pre - текст показывается с учетом всех пробелов и переносов
+    В разметке у нас есть несколько пробелов и разрыв
+    строки.
+    pre - текст показывается с учетом всех пробелов и переносов
   </p>
   <p class="preline">
-    В разметке у нас есть несколько пробелов
-    и разрыв строки, но в результате несколько пробелов игнорируются. pre-line - текст будет перенесен на следующую строку, при соответствующей команде в коде, пробелы игнорируются
+    В разметке у нас есть несколько пробелов и разрыв
+    строки,
+    но в результате несколько пробелов игнорируются.
+    pre-line - текст будет перенесен на следующую строку, при соответствующей команде в коде,
+    пробелы игнорируются
   </p>
   <p class="prewrap">
-    В разметке у нас есть несколько
-    пробелы и разрыв строки. pre-wrap - в тексте сохраняются все пробелы и переносы
+    В разметке у нас есть несколько пробелов и разрывов
+    строки.
+    pre-wrap - в тексте сохраняются все пробелы и переносы
   </p>
 </body>
 
