--- a/index.html
+++ b/index.html
@@ -108,10 +108,14 @@
   <br><strong>Жирное начертание текста</strong> <!-- Тег логической разметки, определяет важность помеченного текста -->
   <br><i>Курсивное начертание текста</i>
   <br><em>Курсивное начертание текста</em>
+  <br><big>Текст крупным шрифтом</big>
+  <br><small>Текст мелким шрифтом</small>
+  <br><ins>Подчеркнутый текст</ins>
+  <br><del>Зачеркнутый текст</del>
   <br>x<sup>2</sup>
   <br>a<sub>1</sub>
 
-  <br><img src="images/image.jpg" width="1350" height="659" alt="Описание изображения"> <!-- Если задать ширину и высоту изображения, то это поможет ускорить загрузу страницы (т.к. резервируется место для изображения) -->
+  <br><img src="images/image.jpg" width="1350" height="659" border="10" alt="Описание изображения"> <!-- Если задать ширину и высоту изображения, то это поможет ускорить загрузу страницы (т.к. резервируется место для изображения) -->
   <br><img src="images/image.jpg" width="30%" height="30%" alt="Описание изображения"> <!-- Размеры изображения вычисляются относительно родительского элемента -->
   <br><img src="https://ya.ru/images/image.jpg" width="30%" height="30 %" alt="Описание изображения">
 
@@ -197,6 +201,8 @@
     <br>Кнопка сброса данных формы в первоначальное состояние <input type="reset" value="Сбросить все"> <!-- При помощи атрибута "value" можно изменить стандартный текст кнопки -->
   </form>
 
+  <span style="color:red">Важный текст</span>
+  <br><font color="#FFFF00">Текст</font>
   <header>
     <h1>Шапка страницы (header)</h1>
   </header>
